2011-01-22  John W. Eaton  <jwe@octave.org>

	* symtab.h (symbol_table::parent_classes):
	Also add parents of parents to the list.  Bug #32210.

2011-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* ov-class.cc (octave_class::subsasgn): Find appropriate unique base
	before trying any indexed assignment.  Bug #32182.

2011-01-22  Konstantinos Poulios  <logari81@googlemail.com>

	* graphics.h.in, graphics.cc (xmtick, ymtick, zmtick):
	New properties holding minor ticks positions.
	(axes::properties::calc_ticks_and_lims): Calculation of minor ticks
	positions.
	* gl-render.h, gl-render.cc
	(opengl_renderer::render_grid,	opengl_renderer::render_tickmarks,
	opengl_renderer::render_ticktexts): New functions.
	(opengl_renderer::draw_axes): Make use of new rendering functions
	and minor ticks positions.
	Correct axis label positioning for x axis at top and y axis at right
	position. Bug #31800.
	Change axis positioning policy for 3D plots, keeping x and y axis
	always at bottom.

2011-01-22  Jaroslav Hajek  <highegg@gmail.com>

	* gl-render.cc: Use octave_refcount for refcounting.
	* oct-map.h: Ditto.
	* ov-base.h: Ditto.
	* pt-mat.cc: Ditto.

2011-01-22  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* ov-mex-fcn.h, txt-eng-ft.cc, mex.cc:
	Initialize all data members in initialization list.

2011-01-22  Pascal Dupuis  <Pascal.Dupuis@worldonline.be>

	* DLD-FUNCTIONS/__init_fltk__.cc (fltk_uimenu): Disallow copying.
	(class plot_window): Likewise.
	* c-file-ptr-stream.h (class c_file_ptr_buf): Likewise.
	(class c_file_ptr_stream): Likewise.
	(class c_zfile_ptr_buf): Likewise.
	* gl-render.cc (class opengl_tesselator): Likewise.
	(class patch_tesselator): Likewise.
	* lex.ll (class flex_stream_reader): Likewise.
	* mex.cc (class mex): Likewise.
	* oct-procbuf.h (class octave_procbuf): Likewise.
	* pt-cbinop.h (class tree_compound_binary_expression): Likewise.
	* symtab.h (class scope_id_cache): Likewise.
	(class symbol_table): Likewise.